Fix react-datepicker content shift

--- a/pages/react-datepicker.css
+++ b/pages/react-datepicker.css
@@ -8,6 +8,10 @@
   display: block;
 }
 
+.react-datepicker__tab-loop {
+  margin-top: 0 !important;
+}
+
 .react-datepicker__input-container {
   font-size: 1rem;
   padding-left: 1rem;
